--- a/css/reset.css
+++ b/css/reset.css
@@ -42,6 +42,8 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
+/*table content*/
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
